fix: related icons spacing

--- a/baton/static/baton/app/src/styles/_placeholders.scss
+++ b/baton/static/baton/app/src/styles/_placeholders.scss
@@ -226,10 +226,12 @@
         }
       }
 
+      .view-related,
+      .delete-related,
       .change-related,
       .add-related {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 10px;
+        margin-right: 10px;
       }
 
       .add-related {
